# cg-file-backup-rs

./: CREDITS.md  LICENSE.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
licenses/: DEPENDENCIES.html
scripts/: release.bat  release.sh  update_version.py
src/: App.js  actions.js  events.js  state.js  ui.js
src-tauri/: 2  Cargo.toml  about.toml  tauri.conf.json
src-tauri/binaries/hdiffpatch_v4.12.0_sdk_android_hpatchz/android_hpatchz/java/com/github/sisong/: HPatch.java
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app/: auto_generation.rs  commands.rs  config.rs  hdiff.rs  hdiff_common.rs  menu.rs  mod.rs  state.rs  tray.rs  types.rs  utils.rs
src/assets/: AppConfig.json
src/style/: compact-mode.css  components.css  layout.css
