[package]
name = "app"
version = "1.1.3"
description = "WorkBackupTool"
authors = ["m0090-dev"]
license = "MIT"
repository = "https://github.com/m0090-dev/cg-file-backup-rs"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["tray-icon"] }
tauri-plugin-log = "2"
chrono = "0.4.42"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
regex = "1.12.2"
zip = { version = "4.2.0", features = ["aes-crypto", "deflate"] }
tar = "0.4.44"
flate2 = "1.1.5"
tokio = { version = "1.49.0", features = ["full"] }
tauri-plugin-notification = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
